# CETWorkOverTime

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  calculate_diligence_time.py  check_lines.py  config.py  date_utils.py  db.py  debug_diligence.py  debug_diligence_2024.py  diligence_time.py  docker-compose.yml  email_fetcher.py  email_header_decoder.py  email_parser.py  email_processor.py  email_repository.py  main.py  migrate_to_db.py  pyproject.toml  recalculate_diligence_fields.py  report_generator.py  requirements.txt
sql/: init.sql
static/: style.css
templates/: dashboard.html  index.html  login.html
tests/: test_dashboard_report_contract.py  test_diligence_time.py  test_email_repository_postgres.py  test_recalculate_diligence_fields_script.py
