[project]
name = "cetworkovertime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chardet>=5.0.0",
    "python-dotenv>=1.0.0",
    "flask>=3.0.0",
    "markdown>=3.5.0",
    "gunicorn>=21.2.0",
    "psycopg[binary]>=3.2.0",
    "psycopg-pool>=3.2.0",
    "pyotp>=2.9.0",
]
